# final-project

./: README.md
.github/workflows/: deploy.yml
.serverless/: meta.json
api-compras/: Lambda_CrearCompra.py  Lambda_ListarCompras.py  README.md  pyproject.toml  requirements.txt  serverless.yml
api-compras/.serverless/: cloudformation-template-update-stack.json  meta.json  serverless-state.json
api-productos/: Lambda_CrearProductos.js  Lambda_FindProduct.js  package-lock.json  package.json  serverless.yml
api-usuarios/: Lambda_UserCreate.py  Lambda_UserLogin.py  Lambda_ValidateTokenAccess.py  serverless.yml
intake/: .gitignore  ELASTIC.md  README.md  package-lock.json  package.json  requirements.txt  serverless.yml
intake/actualizar_compras/: README.md  handler.py
intake/actualizar_productos/: README.md  handler.py
intake/shared/: elasticsearch_client.py  s3_client.py  utils.py
